# DragonsDB

./: .gitignore  README.md  WAL_IMPLEMENTATION.md
.github/workflows/: ci-cd-lab7.yml  deploy-java-lab7.yml  deploy-loadbalancer-lab7.yml  deploy-scripts-lab7.yml
assembly/: .gitignore  autobuild.sh  pom.xml
assembly/client/: pom.xml
assembly/common/: pom.xml
assembly/server/: pom.xml
docs/: report_lab_5.docx  report_lab_6.docx  report_lab_7.docx
schemes/: client.puml  model.puml  server.puml
scripts/: demo.sh  init_script.txt  logs-manage.sh  logs-monitor.sh  logs.sh  run-client.sh  start.sh  test_recursion  test_script.txt
src/: Main.java  db.cfg  log4j.properties
src/LoadBalancer/: CMakeLists.txt
src/LoadBalancer/include/config/: LoadBalancerDefaults.hpp
src/LoadBalancer/include/net/: ByteCodec.hpp  PacketHandler.hpp  UdpServer.hpp  WireHeader.hpp
src/LoadBalancer/include/strategy/: BalancingStrategy.hpp  IpHashStrategy.hpp  LeastConnectionsStrategy.hpp  RoundRobinStrategy.hpp  WeightedRoundRobinStrategy.hpp
src/LoadBalancer/include/util/: BackendRegistry.hpp  CommandLineOptions.hpp  StrategyFactory.hpp
src/LoadBalancer/src/: BackendRegistry.cpp  CommandLineOptions.cpp  IpHashStrategy.cpp  LeastConnectionsStrategy.cpp  PacketHandler.cpp  RoundRobinStrategy.cpp  StrategyFactory.cpp  UdpServer.cpp  WeightedRoundRobinStrategy.cpp  WireHeader.cpp  main.cpp
src/client/: BufferedCommand.java  Client.java  ClientCommandQueue.java  CmdHandler.java  RequestClient.java
src/collection/: API.java  ApiCommand.java  Collection.java  DatabaseCollection.java  RemoteCollection.java
src/core/: BadDataException.java  Coordinates.java  Defaults.java  ParameterRequest.java  Request.java  Response.java  WireFrame.java
src/dragon/: Dragon.java  DragonHead.java  DragonType.java
src/server/: Server.java  (+12 more)
(+55 files in other folders)
